fix(core): :adhesive_bandage: add `_lastUpdated` to all sort orders
Fix #193

--- a/packages/core/r4b/resource-search.ts.hbs
+++ b/packages/core/r4b/resource-search.ts.hbs
@@ -150,7 +150,7 @@ export type SortOrder{{type}} =
         | "{{code}}" | "-{{code}}"
       {{/startsWith}}
     {{/if}}
-  {{/each}};
+  {{/each}} | "_lastUpdated" | "-_lastUpdated";
 {{/if}}
 
 {{/each}}
